--- a/1/2/ulice-są-dla-ludzi-nie-dla-słońca/index.html
+++ b/1/2/ulice-są-dla-ludzi-nie-dla-słońca/index.html
@@ -113,7 +113,8 @@ pluton przestał być planetą masz wątpliwości co do wszystkiego)</p>
 <p>dni są szczelne nie przecieka tu żaden obcy dźwięk</p>
 <p>chciałabyś wejść w ten wiersz jak w rok przestępny otworzyć<br>
 go na oścież</p>
-<p><em>Tytuł wiersza to praca Zbigniewa Dłubaka.</em></p>
+<p><br>
+<em>Tytuł wiersza to praca Zbigniewa Dłubaka.</em></p>
 
 				<aside>
 					<details class="bio">
