--- a/1/4/index.html
+++ b/1/4/index.html
@@ -3,15 +3,15 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>FALE & FUNKCJE | Wydanie 1 POZa Linią</title>
+		<title>FUNKCJE & FALE | Wydanie 1 POZa Linią</title>
 		<link rel="stylesheet" href="/common.css">
 		<link rel="canonical" href="https://pozalinia.pl/1/4/">
-		<meta property="og:title" content="FALE & FUNKCJE | POZa Linią">
-		<meta name="description" content="Grupa tekstów FALE & FUNKCJE w ramach wydania 1 POZa Linią">
-		<meta property="og:description" content="Grupa tekstów FALE & FUNKCJE w ramach wydania 1 POZa Linią">
+		<meta property="og:title" content="FUNKCJE & FALE | POZa Linią">
+		<meta name="description" content="Grupa tekstów FUNKCJE & FALE w ramach wydania 1 POZa Linią">
+		<meta property="og:description" content="Grupa tekstów FUNKCJE & FALE w ramach wydania 1 POZa Linią">
 		<meta property="og:type" content="article">
 		<meta property="og:url" content="">
-		<meta property="og:image" content="/assets/fale_dark.png">
+		<meta property="og:image" content="/assets/funkcje_dark.png">
 <style>
 @font-face {
   font-family: "Lora";
@@ -100,8 +100,8 @@ details[open] span::after {
 			</header>
 			<div style="position: relative">
 				<picture>
-					<source srcset="/assets/fale_dark.png" media="(prefers-color-scheme: dark)">
-					<img style="width: 100%" src="/assets/fale_light.png">
+					<source srcset="/assets/funkcje_dark.png" media="(prefers-color-scheme: dark)">
+					<img style="width: 100%" src="/assets/funkcje_light.png">
 				</picture>
 			<section style="position: absolute; bottom: 1rem; right: 1rem; font-size: 1rem; text-align: right; color: #222"><p>„Fal, nie ma fal”<br>
 (Dawid Podsiadło, Nie ma fal)</p>
@@ -112,7 +112,7 @@ details[open] span::after {
 
 						<a id="goprev" href="/1/3/studium-budzika/" style="text-decoration: none">◁</a>
 
-					FALE & FUNKCJE
+					FUNKCJE & FALE
 
 
 						<a id="gonext" href="/1/4/odbicie/" style="text-decoration: none">▷</a>
@@ -166,7 +166,7 @@ details[open] span::after {
 
 				<div style="display: flex; gap: 1ch; margin: 0">
 					<a style="font-size: 1rem" href="/1/">Wydanie 1 „Geometrie”</a>
-					<a style="font-size: 1rem" href="/1/4/">FALE & FUNKCJE</a>
+					<a style="font-size: 1rem" href="/1/4/">FUNKCJE & FALE</a>
 				</div>
 
 					<a id="gonext" href="/1/4/odbicie/" style="text-decoration: none">▷</a>
