--- a/1/4/rozpisane-w-czasie-obrazy/index.html
+++ b/1/4/rozpisane-w-czasie-obrazy/index.html
@@ -200,7 +200,7 @@ Książka poetycka Korlackiego ma wiele zaskakujących momentów, rozmawia <span
 
 				<div style="display: flex; gap: 1ch; margin: 0">
 					<a style="font-size: 1rem" href="/1/">Wydanie 1 „Geometrie”</a>
-					<a style="font-size: 1rem" href="/1/4/">FALE & FUNKCJE</a>
+					<a style="font-size: 1rem" href="/1/4/">FUNKCJE & FALE</a>
 				</div>
 
 					<a id="gonext" href="/1/4/kiedy-do-niego-wje%C5%BCd%C5%BCamy/" style="text-decoration: none">▷</a>
