--- a/1/4/była-jeszcze-tak-mała/index.html
+++ b/1/4/była-jeszcze-tak-mała/index.html
@@ -117,7 +117,7 @@ i tej krótkiej smyczy tam</p>
 
 				<div style="display: flex; gap: 1ch; margin: 0">
 					<a style="font-size: 1rem" href="/1/">Wydanie 1 „Geometrie”</a>
-					<a style="font-size: 1rem" href="/1/4/">FALE & FUNKCJE</a>
+					<a style="font-size: 1rem" href="/1/4/">FUNKCJE & FALE</a>
 				</div>
 
 					<a id="gonext" href="/1/4/rozpisane-w-czasie-obrazy/" style="text-decoration: none">▷</a>
