--- a/1/4/jedyny-śnieg-tego-lata/index.html
+++ b/1/4/jedyny-śnieg-tego-lata/index.html
@@ -115,7 +115,7 @@ i jego wyczerpanych zim</p>
 
 				<div style="display: flex; gap: 1ch; margin: 0">
 					<a style="font-size: 1rem" href="/1/">Wydanie 1 „Geometrie”</a>
-					<a style="font-size: 1rem" href="/1/4/">FALE & FUNKCJE</a>
+					<a style="font-size: 1rem" href="/1/4/">FUNKCJE & FALE</a>
 				</div>
 
 					<a id="gonext" href="/1/4/by%C5%82a-jeszcze-tak-ma%C5%82a/" style="text-decoration: none">▷</a>
