--- a/1/4/kiedy-do-niego-wjeżdżamy/index.html
+++ b/1/4/kiedy-do-niego-wjeżdżamy/index.html
@@ -122,7 +122,7 @@ nie<span style="display:inline-block;width:3ch;"></span>ma<span style="display:i
 
 				<div style="display: flex; gap: 1ch; margin: 0">
 					<a style="font-size: 1rem" href="/1/">Wydanie 1 „Geometrie”</a>
-					<a style="font-size: 1rem" href="/1/4/">FALE & FUNKCJE</a>
+					<a style="font-size: 1rem" href="/1/4/">FUNKCJE & FALE</a>
 				</div>
 
 					<a id="gonext" href="/1/4/kiedy-zaczyna-si%C4%99-sjesta/" style="text-decoration: none">▷</a>
