--- a/1/4/kiedy-schodzimy-ku-wodzie/index.html
+++ b/1/4/kiedy-schodzimy-ku-wodzie/index.html
@@ -118,7 +118,7 @@ ceramiczne serce.</p>
 
 				<div style="display: flex; gap: 1ch; margin: 0">
 					<a style="font-size: 1rem" href="/1/">Wydanie 1 „Geometrie”</a>
-					<a style="font-size: 1rem" href="/1/4/">FALE & FUNKCJE</a>
+					<a style="font-size: 1rem" href="/1/4/">FUNKCJE & FALE</a>
 				</div>
 
 					<a id="gonext" href="/1/4/poca%C5%82unek-na-rondzie-kaponiera/" style="text-decoration: none">▷</a>
