--- a/1/4/kiedy-zaczyna-się-sjesta/index.html
+++ b/1/4/kiedy-zaczyna-się-sjesta/index.html
@@ -122,7 +122,7 @@ kim jest ten, który was opuścił?</p>
 
 				<div style="display: flex; gap: 1ch; margin: 0">
 					<a style="font-size: 1rem" href="/1/">Wydanie 1 „Geometrie”</a>
-					<a style="font-size: 1rem" href="/1/4/">FALE & FUNKCJE</a>
+					<a style="font-size: 1rem" href="/1/4/">FUNKCJE & FALE</a>
 				</div>
 
 					<a id="gonext" href="/1/4/kiedy-schodzimy-ku-wodzie/" style="text-decoration: none">▷</a>
