--- a/1/4/perfekcyjna-burza/index.html
+++ b/1/4/perfekcyjna-burza/index.html
@@ -115,7 +115,7 @@ A potem jest miłość, i ja to mówię? Kto by się spodziewał deszczu co z-bu
 
 				<div style="display: flex; gap: 1ch; margin: 0">
 					<a style="font-size: 1rem" href="/1/">Wydanie 1 „Geometrie”</a>
-					<a style="font-size: 1rem" href="/1/4/">FALE & FUNKCJE</a>
+					<a style="font-size: 1rem" href="/1/4/">FUNKCJE & FALE</a>
 				</div>
 
 					<a id="gonext" href="/1/4/fala-w-polu/" style="text-decoration: none">▷</a>
