--- a/1/4/piosenka-jamajskiego-pracownika-na-promie/index.html
+++ b/1/4/piosenka-jamajskiego-pracownika-na-promie/index.html
@@ -122,7 +122,7 @@ bez wiersza, który pozwala im śpiewać w kołnierzach fal”</p>
 
 				<div style="display: flex; gap: 1ch; margin: 0">
 					<a style="font-size: 1rem" href="/1/">Wydanie 1 „Geometrie”</a>
-					<a style="font-size: 1rem" href="/1/4/">FALE & FUNKCJE</a>
+					<a style="font-size: 1rem" href="/1/4/">FUNKCJE & FALE</a>
 				</div>
 
 					<a id="gonext" href="/1/4/perfekcyjna-burza/" style="text-decoration: none">▷</a>
