--- a/1/4/pocałunek-na-rondzie-kaponiera/index.html
+++ b/1/4/pocałunek-na-rondzie-kaponiera/index.html
@@ -123,7 +123,7 @@ Nigdy z nikim nie całowałem się tak długo.</p>
 
 				<div style="display: flex; gap: 1ch; margin: 0">
 					<a style="font-size: 1rem" href="/1/">Wydanie 1 „Geometrie”</a>
-					<a style="font-size: 1rem" href="/1/4/">FALE & FUNKCJE</a>
+					<a style="font-size: 1rem" href="/1/4/">FUNKCJE & FALE</a>
 				</div>
 
 					<a id="gonext" href="/1/" style="text-decoration: none">▷</a>
