--- a/1/4/w-obiegu/index.html
+++ b/1/4/w-obiegu/index.html
@@ -109,7 +109,7 @@ details[open] span::after {
 
 				<div style="display: flex; gap: 1ch; margin: 0">
 					<a style="font-size: 1rem" href="/1/">Wydanie 1 „Geometrie”</a>
-					<a style="font-size: 1rem" href="/1/4/">FALE & FUNKCJE</a>
+					<a style="font-size: 1rem" href="/1/4/">FUNKCJE & FALE</a>
 				</div>
 
 					<a id="gonext" href="/1/4/oceany/" style="text-decoration: none">▷</a>
