--- a/1/1/jeśli-zamknę-lewe-oko/index.html
+++ b/1/1/jeśli-zamknę-lewe-oko/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>***(Jeśli zamknę lewe oko) | Wydanie 1 POZa Linią</title>
+		<title>***[Jeśli zamknę lewe oko] | Wydanie 1 POZa Linią</title>
 		<link rel="stylesheet" href="/common.css">
 <style>
 @font-face {
@@ -89,7 +89,7 @@ details[open] span::after {
 
 						<a id="goprev" href="/1/1/ciep%C5%82y-oddech/" style="text-decoration: none">◁</a>
 
-					<p>***(Jeśli zamknę lewe oko)</p>
+					<p>***[Jeśli zamknę lewe oko]</p>
 
 
 						<a id="gonext" href="/1/1/rz%C4%85dy-twardej-r%C4%99ki-to-nie-autorytaryzm/" style="text-decoration: none">▷</a>
