--- a/1/osoby/index.html
+++ b/1/osoby/index.html
@@ -103,7 +103,7 @@ h1 > * {
 						<dd><a href="/1/3/pranie-prochu/">pranie prochu</a></dd>
 						<dt style="font-weight: bold">Ewelina Cis</dt>
 						<dd><a href="/1/1/ciep%C5%82y-oddech/">***[Ciepły oddech]</a></dd>
-						<dd><a href="/1/1/je%C5%9Bli-zamkn%C4%99-lewe-oko/">***(Jeśli zamknę lewe oko)</a></dd>
+						<dd><a href="/1/1/je%C5%9Bli-zamkn%C4%99-lewe-oko/">***[Jeśli zamknę lewe oko]</a></dd>
 						<dt style="font-weight: bold">Izabela Poniatowska</dt>
 						<dd><a href="/1/3/olivia-colman/">olivia colman ma obłęd w oczach</a></dd>
 						<dt style="font-weight: bold">Jan Mokrzycki</dt>
