--- a/osoby/ewelina-cis/index.html
+++ b/osoby/ewelina-cis/index.html
@@ -121,7 +121,7 @@ details[open] span::after {
 
 <ul>
 				<li><a href="/1/1/ciep%C5%82y-oddech/">***[Ciepły oddech]</a></li>
-				<li><a href="/1/1/je%C5%9Bli-zamkn%C4%99-lewe-oko/">***(Jeśli zamknę lewe oko)</a></li>
+				<li><a href="/1/1/je%C5%9Bli-zamkn%C4%99-lewe-oko/">***[Jeśli zamknę lewe oko]</a></li>
 			</main>
 		</div>
 		<footer style="display: flex; justify-content: space-between; align-items: center; margin-top: 1rem; padding-top: 0.5rem">
