--- a/1/4/piosenka-jamajskiego-pracownika-na-promie/index.html
+++ b/1/4/piosenka-jamajskiego-pracownika-na-promie/index.html
@@ -112,7 +112,7 @@ bez wiersza, który pozwala im śpiewać w kołnierzach fal”</p>
 				<aside>
 					<details class="bio">
 						<summary><span>Bianka Rolando</span></summary>
-						Bianka Rolando – Urodziła się w 1979 roku w Warszawie, poetka, artystka, wykładowczyni. Stale współpracuje z Galerią Foksal w Warszawie. Jest autorką książek: „Absyda” (2024). „Abrasz” (2022), „Ostańce” (2020), „Stelle” (2018), „Pascha” (2016), „Łęgi” (2015), „Podpłomyki” (2012), „Modrzewiowe korony” (2010), „Biała książka” (2009), „Rozmówki włoskie” (2007).
+						Bianka Rolando – urodziła się w 1979 roku w Warszawie, poetka, artystka, wykładowczyni. Stale współpracuje z Galerią Foksal w Warszawie. Jest autorką książek: „Absyda” (2024). „Abrasz” (2022), „Ostańce” (2020), „Stelle” (2018), „Pascha” (2016), „Łęgi” (2015), „Podpłomyki” (2012), „Modrzewiowe korony” (2010), „Biała książka” (2009), „Rozmówki włoskie” (2007).
 						<a href="/osoby/bianka-rolando/">Wszystkie teksty</a>
 					</details>
 				</aside>
