--- a/osoby/bianka-rolando/index.html
+++ b/osoby/bianka-rolando/index.html
@@ -113,7 +113,7 @@ details[open] span::after {
 					<br>
 				</h1>
 
-			Bianka Rolando – Urodziła się w 1979 roku w Warszawie, poetka, artystka, wykładowczyni. Stale współpracuje z Galerią Foksal w Warszawie. Jest autorką książek: „Absyda” (2024). „Abrasz” (2022), „Ostańce” (2020), „Stelle” (2018), „Pascha” (2016), „Łęgi” (2015), „Podpłomyki” (2012), „Modrzewiowe korony” (2010), „Biała książka” (2009), „Rozmówki włoskie” (2007).
+			Bianka Rolando – urodziła się w 1979 roku w Warszawie, poetka, artystka, wykładowczyni. Stale współpracuje z Galerią Foksal w Warszawie. Jest autorką książek: „Absyda” (2024). „Abrasz” (2022), „Ostańce” (2020), „Stelle” (2018), „Pascha” (2016), „Łęgi” (2015), „Podpłomyki” (2012), „Modrzewiowe korony” (2010), „Biała książka” (2009), „Rozmówki włoskie” (2007).
 
 			<h2 style="text-align: center">Zbiór tekstów</h2>
 
