--- a/1/3/pranie-prochu/index.html
+++ b/1/3/pranie-prochu/index.html
@@ -104,16 +104,16 @@ konar i myślisz se że<br>
 wyszczuplejesz choć nie<br>
 kończysz czytać wiersz i od teraz po ostatniej<br>
 linii czytasz inaczej pierwszą –<br>
-mam oczy różowe od oledów, chcę do doktora Kinola<br>
+<span style="display:inline-block;width:12ch"></span><em>mam oczy różowe od oledów, chcę do doktora Kinola</em><br>
 – a jakoś<br>
-ci         się ulewa do kubka                                                               z<br>
-których w końcu jest język                                                               a psy<br>
+<span style="display:inline-block;width:1ch"></span>ci<span style="display:inline-block;width:4ch"></span>się ulewa do kubka<span style="display:inline-block;width:24ch"></span>z<br>
+<span style="display:inline-block;width:4ch"></span>których w końcu jest język<span style="display:inline-block;width:21ch"></span>a psy<br>
 w złości oszczekują<br>
 mnie<br>
 chwilowo<br>
-kałuża pachnie niczym
-strumienie,<br>
-kanały.<br>
+kałuża pachnie niczym<br>
+<span style="display:inline-block;width:21ch"></span>strumienie,<br>
+<span style="display:inline-block;width:40ch"></span>kanały.<br>
 Wakacje.</p>
 
 				<aside>
