--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ h2 {
 		</header>
 
 		<a href="/1/" id="release01">
-			<h2 style="transform: translate(-8vw, -20vh)">Wydanie 1:<br>Geometrie</h2>
+			<h2 style="transform: translate(-100%, -160%); font-family: Oswald, serif; font-size: 2rem">Wydanie 1:<div style="transform: translate(1ch, 0)">Geometrie</div></h2>
 		</a>
 
 	<div style="max-width: 1000px; margin-inline: auto">
