--- a/1/3/aloha-grace/index.html
+++ b/1/3/aloha-grace/index.html
@@ -136,20 +136,20 @@ details[open] span::after {
 			<nav class="bottom" style="display: flex; justify-content: space-around; align-items: center; margin-bottom: 1rem; font-size: 2rem; margin-top: 2rem">
 					<a id="goprev" href="/1/3/matka-mothra/" style="text-decoration: none">◁</a>
 
-				<div style="display: flex; gap: 1ch; margin: 0">
-					<a style="font-size: 1rem" href="/1/">Wydanie 1 „Geometrie”</a>
-					<a style="font-size: 1rem" href="/1/3/">PROSTE = (Z)ŁAMANE</a>
+				<div style="display: flex; gap: 1ch; margin: 0; justify-items: center; align-items: center">
+					<a style="font-size: 1rem; text-align: right" href="/1/">Wydanie 1 „Geometrie”</a>
+					<a style="font-size: 1rem; text-align: left" href="/1/3/">PROSTE = (Z)ŁAMANE</a>
 				</div>
 
 					<a id="gonext" href="/1/3/pranie-prochu/" style="text-decoration: none">▷</a>
 			</nav>
 		</div>
 		<footer style="display: flex; justify-content: space-between; align-items: center; margin-top: 1rem; padding-top: 0.5rem">
-	<div style="display: flex; flex-direction: row; gap: 1ch; justify-content: center; align-items: center">
+	<nav style="display: flex; flex-direction: row; gap: 1ch; align-items: center; flex-wrap: wrap; margin-right: 1ch;">
 		<a style="font-size: 1.2em" href="/">Strona Główna</a>
 		<a style="font-size: 1.2em" href="/o-nas/">O Nas</a>
 		<a style="font-size: 1.2em" href="/kontakt/">Kontakt</a>
-	</div>
+	</nav>
 	<div style="display: flex; gap: 1ch">
 		<a href="https://www.facebook.com/czasopismo.pozalinia/" target="_blank">
 			<picture>
