--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@ h2 {
 			<h2 style="transform: translate(-100%, -160%); font-family: Oswald, serif; font-size: 2rem">Wydanie 1:<div style="transform: translate(1ch, 0)">Geometrie</div></h2>
 		</a>
 
-	<div style="max-width: 1000px; margin-inline: auto">
+	<div style="max-width: 1000px; margin-inline: auto; padding-inline: 1ch; margin-bottom: 1ch">
 		<footer style="display: flex; justify-content: space-between; align-items: center; margin-top: 1rem; padding-top: 0.5rem">
-	<div style="display: flex; flex-direction: row; gap: 1ch; justify-content: center; align-items: center">
+	<nav style="display: flex; flex-direction: row; gap: 1ch; align-items: center; flex-wrap: wrap; margin-right: 1ch;">
 		<a style="font-size: 1.2em" href="/">Strona Główna</a>
 		<a style="font-size: 1.2em" href="/o-nas/">O Nas</a>
 		<a style="font-size: 1.2em" href="/kontakt/">Kontakt</a>
-	</div>
+	</nav>
 	<div style="display: flex; gap: 1ch">
 		<a href="https://www.facebook.com/czasopismo.pozalinia/" target="_blank">
 			<picture>
