--- a/osoby/aleksandra-kasprzak/index.html
+++ b/osoby/aleksandra-kasprzak/index.html
@@ -124,11 +124,11 @@ details[open] span::after {
 			</main>
 		</div>
 		<footer style="display: flex; justify-content: space-between; align-items: center; margin-top: 1rem; padding-top: 0.5rem">
-	<div style="display: flex; flex-direction: row; gap: 1ch; justify-content: center; align-items: center">
+	<nav style="display: flex; flex-direction: row; gap: 1ch; align-items: center; flex-wrap: wrap; margin-right: 1ch;">
 		<a style="font-size: 1.2em" href="/">Strona Główna</a>
 		<a style="font-size: 1.2em" href="/o-nas/">O Nas</a>
 		<a style="font-size: 1.2em" href="/kontakt/">Kontakt</a>
-	</div>
+	</nav>
 	<div style="display: flex; gap: 1ch">
 		<a href="https://www.facebook.com/czasopismo.pozalinia/" target="_blank">
 			<picture>
