--- a/index.html
+++ b/index.html
@@ -50,7 +50,14 @@ body {
 h2 {
 	position: absolute;
 	top: 50%;
-	transform: translate(0, -50%);
+	transform: translate(-100%, -160%);
+	transition: transform 100ms ease-in-out;
+}
+
+@media (max-width: 50ch) {
+	h2 {
+		transform: translate(-82%, -155%);
+	}
 }
 
 </style>
@@ -66,7 +73,7 @@ h2 {
 		</header>
 
 		<a href="/1/" id="release01">
-			<h2 style="transform: translate(-100%, -160%); font-family: Oswald, serif; font-size: 2rem">Wydanie 1:<div style="transform: translate(1ch, 0)">Geometrie</div></h2>
+			<h2 style="font-family: Oswald, serif; font-size: 2rem">Wydanie 1:<div style="transform: translate(1ch, 0)">Geometrie</div></h2>
 		</a>
 
 	<div style="max-width: 1000px; margin-inline: auto; padding-inline: 1ch; margin-bottom: 1ch">
