--- a/1/4/index.html
+++ b/1/4/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html>
-	<head>
+<html><head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>FUNKCJE & FALE | Wydanie 1 POZa Linią</title>
+		<title>FUNKCJE &amp; FALE | Wydanie 1 POZa Linią</title>
 		<link rel="stylesheet" href="/common.css">
 		<link rel="canonical" href="https://pozalinia.pl/1/4/">
-		<meta property="og:title" content="FUNKCJE & FALE | POZa Linią">
-		<meta name="description" content="Grupa tekstów FUNKCJE & FALE w ramach wydania 1 POZa Linią">
-		<meta property="og:description" content="Grupa tekstów FUNKCJE & FALE w ramach wydania 1 POZa Linią">
+		<meta property="og:title" content="FUNKCJE &amp; FALE | POZa Linią">
+		<meta name="description" content="Grupa tekstów FUNKCJE &amp; FALE w ramach wydania 1 POZa Linią">
+		<meta property="og:description" content="Grupa tekstów FUNKCJE &amp; FALE w ramach wydania 1 POZa Linią">
 		<meta property="og:type" content="article">
 		<meta property="og:url" content="">
 		<meta property="og:image" content="/assets/funkcje_dark.png">
@@ -99,7 +98,17 @@ details[open] span::after {
 	}
 }
 </style>
-	</head>
+	<link rel="icon" sizes="48x48" href="/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" sizes="any" href="/favicon.svg" type="image/svg+xml">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="POZa Linią">
+<meta property="og:locale" content="pl">
+<meta property="og:title" content="FUNKCJE &amp; FALE">
+<meta property="og:url" content="https://pozalinia.pl/1/4/">
+<meta property="og:image" content="https://pozalinia.pl/assets/funkcje_light.png">
+<meta name="twitter:card" content="summary_large_image">
+</head>
 	<body style="display: flex; flex-direction: column; justify-content: space-between">
 		<div>
 			<header style="display: flex; justify-content: center">
@@ -124,7 +133,7 @@ details[open] span::after {
 
 						<a id="goprev" href="/1/3/studium-budzika/" style="text-decoration: none">◁</a>
 
-					FUNKCJE & FALE
+					FUNKCJE &amp; FALE
 
 
 						<a id="gonext" href="/1/4/odbicie/" style="text-decoration: none">▷</a>
@@ -178,7 +187,7 @@ details[open] span::after {
 
 				<div style="display: flex; gap: 1ch; margin: 0">
 					<a style="font-size: 1rem; text-align: right" href="/1/">Wydanie 1 „Geometrie”</a>
-					<a style="font-size: 1rem; text-align: left" href="/1/4/">FUNKCJE & FALE</a>
+					<a style="font-size: 1rem; text-align: left" href="/1/4/">FUNKCJE &amp; FALE</a>
 				</div>
 
 					<a id="gonext" href="/1/4/odbicie/" style="text-decoration: none">▷</a>
@@ -193,20 +202,20 @@ details[open] span::after {
 	<div style="display: flex; gap: 1ch">
 		<a href="https://www.facebook.com/czasopismo.pozalinia/" target="_blank">
 			<picture>
-				<source srcset="https://img.icons8.com/?size=100&id=435&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
-				<img src="https://img.icons8.com/?size=100&id=435&format=png&color=006edc" style="height: 2em">
+				<source srcset="https://img.icons8.com/?size=100&amp;id=435&amp;format=png&amp;color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&amp;id=435&amp;format=png&amp;color=006edc" style="height: 2em">
 			</picture>
 		</a>
 		<a href="https://www.instagram.com/pozalinia/" target="_blank">
 			<picture>
-				<source srcset="https://img.icons8.com/?size=100&id=32292&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
-				<img src="https://img.icons8.com/?size=100&id=32292&format=png&color=006edc" style="height: 2em">
+				<source srcset="https://img.icons8.com/?size=100&amp;id=32292&amp;format=png&amp;color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&amp;id=32292&amp;format=png&amp;color=006edc" style="height: 2em">
 			</picture>
 		</a>
 		<a href="/releases.rss" target="_blank">
 			<picture>
-				<source srcset="https://img.icons8.com/?size=100&id=478&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
-				<img src="https://img.icons8.com/?size=100&id=478&format=png&color=006edc" style="height: 2em">
+				<source srcset="https://img.icons8.com/?size=100&amp;id=478&amp;format=png&amp;color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&amp;id=478&amp;format=png&amp;color=006edc" style="height: 2em">
 			</picture>
 		</a>
 	</div>
@@ -220,5 +229,6 @@ details[open] span::after {
 				}
 			});
 		</script>
-	</body>
-</html>
+	
+
+</body></html>
