--- a/1/przedmowa/index.html
+++ b/1/przedmowa/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html>
-	<head>
+<html><head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title> | Wydanie  POZa Linią</title>
+		<title>Przedmowa | Wydanie 1 POZa Linią</title>
 		<link rel="stylesheet" href="/common.css">
 <style>
 @font-face {
@@ -96,7 +95,13 @@ details[open] span::after {
 	opacity: 0.7;
 }
 </style>
-	</head>
+	<link rel="icon" sizes="48x48" href="/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" sizes="any" href="/favicon.svg" type="image/svg+xml">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://pozalinia.pl/1/przedmowa/">
+<meta name="twitter:card" content="summary">
+</head>
 	<body style="display: flex; flex-direction: column; justify-content: space-between">
 		<div>
 			<header style="display: flex; justify-content: center">
@@ -127,7 +132,7 @@ details[open] span::after {
 
 <p>Wszystko, co naprawdę istotne, dzieje się gdzieś pomiędzy liniami, w przestrzeni na marginesach. „Na górę jedzie? A gdzie ma jechać, w bok?” – pytał kiedyś Miałczyński u Koterskiego, prowokując nas dziś do porzucenia komfortowych pionów i poziomów, ku ruchowi bocznemu, horyzontalnemu, wymykającemu się prostej logice wzlotów i upadków. „Otwiera tym samym możliwość, z której chętnie korzysta najnowsza poezja – ruchu windą w bok, czyli myślenia horyzontalnego, przestrzennego, w kategoriach potencjalności i wbrew logice” – jak pisze Jakub Skurtys.</p>
 <p>Właśnie w tym ruchu – pełnym przekory i nieoczywistych kierunków – odnajdujemy sens istnienia naszego czasopisma. „Przez jeden punkt przeprowadzić można nieskończenie wiele prostych”, jak pisze Zuzanna Stasiak, przypominając nam, że literatura to właśnie takie punkty przecięcia, „skupiska” indywidualnych perspektyw. Punkty, z których, zgodnie ze słowami Justyny Kulikowskiej, „jedyny ruch, jaki mogę wykonać, to ten w obrębie zdania” – bo każde zdanie, każde słowo, każda fraza może być początkiem wyjścia poza własne ograniczenia.</p>
-<p>W pierwszym numerze „POZa Linią” oddajemy głos osobom autorskim, których teksty stają się soczewkami ogniskującymi współczesność. Selekcja tekstów to decyzja redakcji, natomiast nasi krytycy opracowali do nich komentarze i podzielili je na cztery grupy tematyczne: „PIONY // POZIOMY”, „PUNKTY → SKUPISKA”, „PROSTE = (Z)ŁAMANE”, „FUNKCJE & FALE”. Każda z tych kategorii wyznacza własną geometrię – układy znaczeń, napięć, opozycji i rytmów, które pozwalają dostrzec mniej oczywiste związki i zależności.</p>
+<p>W pierwszym numerze „POZa Linią” oddajemy głos osobom autorskim, których teksty stają się soczewkami ogniskującymi współczesność. Selekcja tekstów to decyzja redakcji, natomiast nasi krytycy opracowali do nich komentarze i podzielili je na cztery grupy tematyczne: „PIONY // POZIOMY”, „PUNKTY → SKUPISKA”, „PROSTE = (Z)ŁAMANE”, „FUNKCJE &amp; FALE”. Każda z tych kategorii wyznacza własną geometrię – układy znaczeń, napięć, opozycji i rytmów, które pozwalają dostrzec mniej oczywiste związki i zależności.</p>
 <p>Dopełnieniem literackich treści są grafiki autorstwa Joanny Wróbel. Jej kompozycje – dynamiczne, abstrakcyjne, pełne geometrycznych form i swobodnych linii – idealnie oddają ideę wychodzenia poza schemat, zachęcając nas do spojrzenia pod innym kątem na znane formy i przestrzenie.</p>
 <p>Zapraszamy Was zatem poza utarte ścieżki – ku miejscom, w których „drwale wożą drewno do lasu i przerabiają na drzewa” (Tomek Bąk), gdzie „cienie popychają swoich ludzi” (Ewelina Cis), a „wszystko będzie się nawarstwiać w umyśle” (Michał Domagalski). Wyruszamy poza linię – nikt „nie jest samotną wyspą”, a literatura istnieje właśnie po to, byśmy mogli odnajdywać się w dialogu z innymi.</p>
 <p>Chcemy, by „POZa Linią” było przestrzenią takich właśnie rozmów – między autorami, pokoleniami, stylami. Rozmów, które uczą patrzeć krytycznie, dociekać, pytać. Rozmów, które zaczynają się poza linią i nigdy się na niej nie kończą.</p>
@@ -153,20 +158,20 @@ details[open] span::after {
 	<div style="display: flex; gap: 1ch">
 		<a href="https://www.facebook.com/czasopismo.pozalinia/" target="_blank">
 			<picture>
-				<source srcset="https://img.icons8.com/?size=100&id=435&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
-				<img src="https://img.icons8.com/?size=100&id=435&format=png&color=006edc" style="height: 2em">
+				<source srcset="https://img.icons8.com/?size=100&amp;id=435&amp;format=png&amp;color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&amp;id=435&amp;format=png&amp;color=006edc" style="height: 2em">
 			</picture>
 		</a>
 		<a href="https://www.instagram.com/pozalinia/" target="_blank">
 			<picture>
-				<source srcset="https://img.icons8.com/?size=100&id=32292&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
-				<img src="https://img.icons8.com/?size=100&id=32292&format=png&color=006edc" style="height: 2em">
+				<source srcset="https://img.icons8.com/?size=100&amp;id=32292&amp;format=png&amp;color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&amp;id=32292&amp;format=png&amp;color=006edc" style="height: 2em">
 			</picture>
 		</a>
 		<a href="/releases.rss" target="_blank">
 			<picture>
-				<source srcset="https://img.icons8.com/?size=100&id=478&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
-				<img src="https://img.icons8.com/?size=100&id=478&format=png&color=006edc" style="height: 2em">
+				<source srcset="https://img.icons8.com/?size=100&amp;id=478&amp;format=png&amp;color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&amp;id=478&amp;format=png&amp;color=006edc" style="height: 2em">
 			</picture>
 		</a>
 	</div>
@@ -180,6 +185,7 @@ details[open] span::after {
 				}
 			});
 		</script>
-	</body>
-</html>
+	
 
+
+</body></html>
