--- a/1/1/index.html
+++ b/1/1/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-	<head>
+<html><head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>PIONY // POZIOMY | Wydanie 1 POZa Linią</title>
@@ -99,7 +98,17 @@ details[open] span::after {
 	}
 }
 </style>
-	</head>
+	<link rel="icon" sizes="48x48" href="/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" sizes="any" href="/favicon.svg" type="image/svg+xml">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="POZa Linią">
+<meta property="og:locale" content="pl">
+<meta property="og:title" content="PIONY // POZIOMY">
+<meta property="og:url" content="https://pozalinia.pl/1/1/">
+<meta property="og:image" content="https://pozalinia.pl/assets/piony_light.png">
+<meta name="twitter:card" content="summary_large_image">
+</head>
 	<body style="display: flex; flex-direction: column; justify-content: space-between">
 		<div>
 			<header style="display: flex; justify-content: center">
@@ -184,20 +193,20 @@ A to prowadzi nas prosto do najbardziej pionowego – i malarskiego zarazem – 
 	<div style="display: flex; gap: 1ch">
 		<a href="https://www.facebook.com/czasopismo.pozalinia/" target="_blank">
 			<picture>
-				<source srcset="https://img.icons8.com/?size=100&id=435&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
-				<img src="https://img.icons8.com/?size=100&id=435&format=png&color=006edc" style="height: 2em">
+				<source srcset="https://img.icons8.com/?size=100&amp;id=435&amp;format=png&amp;color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&amp;id=435&amp;format=png&amp;color=006edc" style="height: 2em">
 			</picture>
 		</a>
 		<a href="https://www.instagram.com/pozalinia/" target="_blank">
 			<picture>
-				<source srcset="https://img.icons8.com/?size=100&id=32292&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
-				<img src="https://img.icons8.com/?size=100&id=32292&format=png&color=006edc" style="height: 2em">
+				<source srcset="https://img.icons8.com/?size=100&amp;id=32292&amp;format=png&amp;color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&amp;id=32292&amp;format=png&amp;color=006edc" style="height: 2em">
 			</picture>
 		</a>
 		<a href="/releases.rss" target="_blank">
 			<picture>
-				<source srcset="https://img.icons8.com/?size=100&id=478&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
-				<img src="https://img.icons8.com/?size=100&id=478&format=png&color=006edc" style="height: 2em">
+				<source srcset="https://img.icons8.com/?size=100&amp;id=478&amp;format=png&amp;color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&amp;id=478&amp;format=png&amp;color=006edc" style="height: 2em">
 			</picture>
 		</a>
 	</div>
@@ -211,5 +220,6 @@ A to prowadzi nas prosto do najbardziej pionowego – i malarskiego zarazem – 
 				}
 			});
 		</script>
-	</body>
-</html>
+	
+
+</body></html>
