--- a/1/2/za-ścianą/index.html
+++ b/1/2/za-ścianą/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
-	<head>
+<html><head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>***[Za ścianą rozgrywa się dramat. Ścian jest wiele] | Wydanie 1 POZa Linią</title>
 		<link rel="stylesheet" href="/common.css">
+		<meta name="author" content="Dobrochna Kołoczek">
 <style>
 @font-face {
   font-family: "Lora";
@@ -73,7 +73,17 @@ details[open] span::after {
 	opacity: 0.7;
 }
 </style>
-	</head>
+	<link rel="icon" sizes="48x48" href="/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" sizes="any" href="/favicon.svg" type="image/svg+xml">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="POZa Linią">
+<meta property="og:locale" content="pl">
+<meta property="og:title" content="*[Za ścianą rozgrywa się dramat. Ścian jest wiele]">
+<meta property="og:url" content="https://pozalinia.pl/1/2/za-%C5%9Bcian%C4%85/">
+<meta property="og:image" content="https://pozalinia.pl/assets/punkty_light.png">
+<meta name="twitter:card" content="summary_large_image">
+</head>
 	<body style="display: flex; flex-direction: column; justify-content: space-between">
 		<div>
 			<header style="display: flex; justify-content: center">
@@ -137,20 +147,20 @@ neutralny jak Szwajcaria i dobry sen,</p>
 	<div style="display: flex; gap: 1ch">
 		<a href="https://www.facebook.com/czasopismo.pozalinia/" target="_blank">
 			<picture>
-				<source srcset="https://img.icons8.com/?size=100&id=435&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
-				<img src="https://img.icons8.com/?size=100&id=435&format=png&color=006edc" style="height: 2em">
+				<source srcset="https://img.icons8.com/?size=100&amp;id=435&amp;format=png&amp;color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&amp;id=435&amp;format=png&amp;color=006edc" style="height: 2em">
 			</picture>
 		</a>
 		<a href="https://www.instagram.com/pozalinia/" target="_blank">
 			<picture>
-				<source srcset="https://img.icons8.com/?size=100&id=32292&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
-				<img src="https://img.icons8.com/?size=100&id=32292&format=png&color=006edc" style="height: 2em">
+				<source srcset="https://img.icons8.com/?size=100&amp;id=32292&amp;format=png&amp;color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&amp;id=32292&amp;format=png&amp;color=006edc" style="height: 2em">
 			</picture>
 		</a>
 		<a href="/releases.rss" target="_blank">
 			<picture>
-				<source srcset="https://img.icons8.com/?size=100&id=478&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
-				<img src="https://img.icons8.com/?size=100&id=478&format=png&color=006edc" style="height: 2em">
+				<source srcset="https://img.icons8.com/?size=100&amp;id=478&amp;format=png&amp;color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&amp;id=478&amp;format=png&amp;color=006edc" style="height: 2em">
 			</picture>
 		</a>
 	</div>
@@ -164,6 +174,7 @@ neutralny jak Szwajcaria i dobry sen,</p>
 				}
 			});
 		</script>
-	</body>
-</html>
+	
 
+
+</body></html>
