--- a/1/4/fala-w-polu/index.html
+++ b/1/4/fala-w-polu/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
-	<head>
+<html><head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>fala w polu | Wydanie 1 POZa Linią</title>
 		<link rel="stylesheet" href="/common.css">
+		<meta name="author" content="Olga Juskowiak">
 <style>
 @font-face {
   font-family: "Lora";
@@ -73,7 +73,17 @@ details[open] span::after {
 	opacity: 0.7;
 }
 </style>
-	</head>
+	<link rel="icon" sizes="48x48" href="/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" sizes="any" href="/favicon.svg" type="image/svg+xml">
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="POZa Linią">
+<meta property="og:locale" content="pl">
+<meta property="og:title" content="fala w polu">
+<meta property="og:url" content="https://pozalinia.pl/1/4/fala-w-polu/">
+<meta property="og:image" content="https://pozalinia.pl/assets/funkcje_light.png">
+<meta name="twitter:card" content="summary_large_image">
+</head>
 	<body style="display: flex; flex-direction: column; justify-content: space-between">
 		<div>
 			<header style="display: flex; justify-content: center">
@@ -122,7 +132,7 @@ rośnie<br>
 
 				<div style="display: flex; gap: 1ch; margin: 0; justify-items: center; align-items: center">
 					<a style="font-size: 1rem; text-align: right" href="/1/">Wydanie 1 „Geometrie”</a>
-					<a style="font-size: 1rem; text-align: left" href="/1/4/">FUNKCJE & FALE</a>
+					<a style="font-size: 1rem; text-align: left" href="/1/4/">FUNKCJE &amp; FALE</a>
 				</div>
 
 					<a id="gonext" href="/1/4/jedyny-%C5%9Bnieg-tego-lata/" style="text-decoration: none">▷</a>
@@ -137,20 +147,20 @@ rośnie<br>
 	<div style="display: flex; gap: 1ch">
 		<a href="https://www.facebook.com/czasopismo.pozalinia/" target="_blank">
 			<picture>
-				<source srcset="https://img.icons8.com/?size=100&id=435&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
-				<img src="https://img.icons8.com/?size=100&id=435&format=png&color=006edc" style="height: 2em">
+				<source srcset="https://img.icons8.com/?size=100&amp;id=435&amp;format=png&amp;color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&amp;id=435&amp;format=png&amp;color=006edc" style="height: 2em">
 			</picture>
 		</a>
 		<a href="https://www.instagram.com/pozalinia/" target="_blank">
 			<picture>
-				<source srcset="https://img.icons8.com/?size=100&id=32292&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
-				<img src="https://img.icons8.com/?size=100&id=32292&format=png&color=006edc" style="height: 2em">
+				<source srcset="https://img.icons8.com/?size=100&amp;id=32292&amp;format=png&amp;color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&amp;id=32292&amp;format=png&amp;color=006edc" style="height: 2em">
 			</picture>
 		</a>
 		<a href="/releases.rss" target="_blank">
 			<picture>
-				<source srcset="https://img.icons8.com/?size=100&id=478&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
-				<img src="https://img.icons8.com/?size=100&id=478&format=png&color=006edc" style="height: 2em">
+				<source srcset="https://img.icons8.com/?size=100&amp;id=478&amp;format=png&amp;color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&amp;id=478&amp;format=png&amp;color=006edc" style="height: 2em">
 			</picture>
 		</a>
 	</div>
@@ -164,6 +174,7 @@ rośnie<br>
 				}
 			});
 		</script>
-	</body>
-</html>
+	
 
+
+</body></html>
