--- a/1/index.html
+++ b/1/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-	<head>
+<html><head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Wydanie 1 | POZa Linią</title>
@@ -69,7 +68,13 @@ footer {
 	border-top: 2px solid #ffbd59;
 }
 </style>
-	</head>
+	<link rel="icon" sizes="48x48" href="/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" sizes="any" href="/favicon.svg" type="image/svg+xml">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://pozalinia.pl/1/">
+<meta name="twitter:card" content="summary">
+</head>
 	<body>
 		<header style="display: flex; justify-content: center">
 			<a href="/">
@@ -131,7 +136,7 @@ footer {
 								<source srcset="/assets/funkcje_dark.png" media="(prefers-color-scheme: dark)">
 								<img src="/assets/funkcje_light.png" style="width: 100%; height: auto" width="2084" height="1033">
 							</picture>
-							<figcaption style="position: absolute; bottom: 6%; right: 2ch">FUNKCJE & FALE</figcaption>
+							<figcaption style="position: absolute; bottom: 6%; right: 2ch">FUNKCJE &amp; FALE</figcaption>
 						</figure>
 					</a>
 					<a href="/1/osoby/" id="">
@@ -155,20 +160,20 @@ footer {
 	<div style="display: flex; gap: 1ch">
 		<a href="https://www.facebook.com/czasopismo.pozalinia/" target="_blank">
 			<picture>
-				<source srcset="https://img.icons8.com/?size=100&id=435&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
-				<img src="https://img.icons8.com/?size=100&id=435&format=png&color=006edc" style="height: 2em">
+				<source srcset="https://img.icons8.com/?size=100&amp;id=435&amp;format=png&amp;color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&amp;id=435&amp;format=png&amp;color=006edc" style="height: 2em">
 			</picture>
 		</a>
 		<a href="https://www.instagram.com/pozalinia/" target="_blank">
 			<picture>
-				<source srcset="https://img.icons8.com/?size=100&id=32292&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
-				<img src="https://img.icons8.com/?size=100&id=32292&format=png&color=006edc" style="height: 2em">
+				<source srcset="https://img.icons8.com/?size=100&amp;id=32292&amp;format=png&amp;color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&amp;id=32292&amp;format=png&amp;color=006edc" style="height: 2em">
 			</picture>
 		</a>
 		<a href="/releases.rss" target="_blank">
 			<picture>
-				<source srcset="https://img.icons8.com/?size=100&id=478&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
-				<img src="https://img.icons8.com/?size=100&id=478&format=png&color=006edc" style="height: 2em">
+				<source srcset="https://img.icons8.com/?size=100&amp;id=478&amp;format=png&amp;color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&amp;id=478&amp;format=png&amp;color=006edc" style="height: 2em">
 			</picture>
 		</a>
 	</div>
@@ -182,6 +187,7 @@ footer {
 				}
 			});
 		</script>
-	</body>
-</html>
+	
 
+
+</body></html>
