--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
-<html>
-	<head>
+<html><head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>POZa Linią</title>
-		<link rel="icon" href="favicon.jpg">
 		<link rel="stylesheet" href="/common.css">
 
 <style>
@@ -61,7 +59,13 @@ h2 {
 }
 
 </style>
-	</head>
+	<link rel="icon" sizes="48x48" href="/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" sizes="any" href="/favicon.svg" type="image/svg+xml">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://pozalinia.pl/">
+<meta name="twitter:card" content="summary">
+</head>
 	<body>
 		<header style="display: flex; justify-content: center">
 			<a href="/">
@@ -86,25 +90,26 @@ h2 {
 	<div style="display: flex; gap: 1ch">
 		<a href="https://www.facebook.com/czasopismo.pozalinia/" target="_blank">
 			<picture>
-				<source srcset="https://img.icons8.com/?size=100&id=435&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
-				<img src="https://img.icons8.com/?size=100&id=435&format=png&color=006edc" style="height: 2em">
+				<source srcset="https://img.icons8.com/?size=100&amp;id=435&amp;format=png&amp;color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&amp;id=435&amp;format=png&amp;color=006edc" style="height: 2em">
 			</picture>
 		</a>
 		<a href="https://www.instagram.com/pozalinia/" target="_blank">
 			<picture>
-				<source srcset="https://img.icons8.com/?size=100&id=32292&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
-				<img src="https://img.icons8.com/?size=100&id=32292&format=png&color=006edc" style="height: 2em">
+				<source srcset="https://img.icons8.com/?size=100&amp;id=32292&amp;format=png&amp;color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&amp;id=32292&amp;format=png&amp;color=006edc" style="height: 2em">
 			</picture>
 		</a>
 		<a href="/releases.rss" target="_blank">
 			<picture>
-				<source srcset="https://img.icons8.com/?size=100&id=478&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
-				<img src="https://img.icons8.com/?size=100&id=478&format=png&color=006edc" style="height: 2em">
+				<source srcset="https://img.icons8.com/?size=100&amp;id=478&amp;format=png&amp;color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&amp;id=478&amp;format=png&amp;color=006edc" style="height: 2em">
 			</picture>
 		</a>
 	</div>
 </footer>
 
 		</div>
-	</body>
-</html>
+	
+
+</body></html>
