--- a/1/1/jeśli-zamknę-lewe-oko/index.html
+++ b/1/1/jeśli-zamknę-lewe-oko/index.html
@@ -79,7 +79,7 @@ details[open] span::after {
 <meta property="og:type" content="website">
 <meta property="og:site_name" content="POZa Linią">
 <meta property="og:locale" content="pl">
-<meta property="og:title" content="&amp;ast;&amp;ast;&amp;ast;[Jeśli zamknę lewe oko]">
+<meta property="og:title" content="*[Jeśli zamknę lewe oko]">
 <meta property="og:url" content="https://pozalinia.pl/1/1/je%C5%9Bli-zamkn%C4%99-lewe-oko/">
 <meta property="og:image" content="https://pozalinia.pl/assets/piony_light.png">
 <meta name="twitter:card" content="summary_large_image">
