--- a/1/2/sieci-zasilające/index.html
+++ b/1/2/sieci-zasilające/index.html
@@ -79,7 +79,7 @@ details[open] span::after {
 <meta property="og:type" content="website">
 <meta property="og:site_name" content="POZa Linią">
 <meta property="og:locale" content="pl">
-<meta property="og:title" content="&amp;ast;&amp;ast;&amp;ast;[sieci zasilające zsiniały z wysiłku nie]">
+<meta property="og:title" content="*[sieci zasilające zsiniały z wysiłku nie]">
 <meta property="og:url" content="https://pozalinia.pl/1/2/sieci-zasilaj%C4%85ce/">
 <meta property="og:image" content="https://pozalinia.pl/assets/punkty_light.png">
 <meta name="twitter:card" content="summary_large_image">
