--- a/1/2/liże-lukier-we-wnętrzu-kuli/index.html
+++ b/1/2/liże-lukier-we-wnętrzu-kuli/index.html
@@ -79,7 +79,7 @@ details[open] span::after {
 <meta property="og:type" content="website">
 <meta property="og:site_name" content="POZa Linią">
 <meta property="og:locale" content="pl">
-<meta property="og:title" content="&amp;ast;&amp;ast;&amp;ast;[liże lukier we wnętrzu kuli kołysze się]">
+<meta property="og:title" content="*[liże lukier we wnętrzu kuli kołysze się]">
 <meta property="og:url" content="https://pozalinia.pl/1/2/li%C5%BCe-lukier-we-wn%C4%99trzu-kuli/">
 <meta property="og:image" content="https://pozalinia.pl/assets/punkty_light.png">
 <meta name="twitter:card" content="summary_large_image">
