--- a/index.html
+++ b/index.html
@@ -63,8 +63,12 @@ h2 {
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" sizes="any" href="/favicon.svg" type="image/svg+xml">
 <meta property="og:type" content="website">
+<meta property="og:title" content="POZa Linią">
+<meta property="og:description" content="„POZa Linią” to świeże terytorium literackie powstało z potrzeby głosu. Głosu, który wybrzmiewa z różnych perspektyw, stron i doświadczeń.">
 <meta property="og:url" content="https://pozalinia.pl/">
-<meta name="twitter:card" content="summary">
+<meta property="og:image" content="https://pozalinia.pl/assets/logo_light.png">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="description" content="„POZa Linią” to świeże terytorium literackie powstało z potrzeby głosu. Głosu, który wybrzmiewa z różnych perspektyw, stron i doświadczeń.">
 </head>
 	<body>
 		<header style="display: flex; justify-content: center">
